# gargoyle

./: .gitignore  .travis.yml  CONTRIBUTING.md  README.md  cabal.project  default.nix  main.yml  release.nix  result  shell.nix
.ci/: default.nix
.ci/nixpkgs/unstable/: github.json
.github/workflows/: main.yml
dep/nixpkgs/: github.json
gargoyle/: CHANGELOG.markdown  ChangeLog.md  README.md  default.nix  gargoyle.cabal  package.nix  shell.nix
gargoyle-nix/: gargoyle-nix.cabal
gargoyle-nix-postgres-monitor/: ChangeLog.md  LICENSE  gargoyle-postgresql-nix.cabal
gargoyle-nix-postgres-monitor/src-bin/: gargoyle-nix-postgres-monitor.hs
gargoyle-nix-postgres-monitor/src/Gargoyle/PostgreSQL/: Nix.hs
gargoyle-nix/src-bin/: gargoyle-nix-postgres-monitor.hs
gargoyle-nix/src/Gargoyle/PostgreSQL/: Nix.hs
gargoyle-postgresql/: ChangeLog.md  README.md  cabal.project  default.nix  gargoyle-postgresql.cabal  package.nix  shell.nix  stack.yaml
gargoyle-postgresql-connect/: ChangeLog.md  README.md  cabal.project  gargoyle-postgresql-connect.cabal
gargoyle-postgresql-connect/src/Gargoyle/PostgreSQL/: Connect.hs
gargoyle-postgresql-nix/: ChangeLog.md  README.md  cabal.project  default.nix  gargoyle-postgresql-nix.cabal
gargoyle-postgresql-nix-monitor/: cabal.project  gargoyle-postgresql-nix-monitor.cabal
gargoyle-postgresql-nix-monitor/src-bin/: gargoyle-nix-postgres-monitor.hs
gargoyle-postgresql-nix/src-bin/: gargoyle-nix-pg-run.hs  gargoyle-nix-psql.hs
gargoyle-postgresql-nix/src/Gargoyle/PostgreSQL/: Nix.hs
gargoyle-postgresql/src-bin/: gargoyle-pg-run.hs  gargoyle-postgres-monitor.hs  gargoyle-psql.hs
gargoyle-postgresql/src/Gargoyle/: PostgreSQL.hs
gargoyle-postgresql/tests/: gargoyle-psql-test.hs
gargoyle/src/: Gargoyle.hs
