name: gargoyle-nix
version: 0.1
author: Obsidian Systems LLC
maintainer: maintainer@obsidian.systems
copyright: Copyright (C) 2017 Obsidian Systems LLC
build-type: Simple
cabal-version: >=1.10
synopsis: Manage PostgreSQL servers with gargoyle and nix
description:
  Like <https://hackage.haskell.org/package/gargoyle-postgresql gargoyle-postgresql> but it uses nix to find the locations of PostgreSQL executables.

library
  exposed-modules: Gargoyle.PostgreSQL.Nix
                 , System.Which
  other-modules: Paths_gargoyle_nix
  ghc-options: -Wall
  ghc-prof-options: -fprof-auto
  build-depends: base
               , bytestring
               , process
               , shelly
               , template-haskell
               , text
               , gargoyle
               , gargoyle-postgresql
  hs-source-dirs: src
  default-language: Haskell2010

executable gargoyle-nix-psql
  main-is: gargoyle-nix-psql.hs
  hs-source-dirs: src-bin
  ghc-options: -Wall -threaded
  ghc-prof-options: -fprof-auto
  default-language: Haskell2010
  build-depends: base
               , gargoyle-postgresql
               , gargoyle-nix

executable gargoyle-nix-postgres-monitor
  main-is: gargoyle-nix-postgres-monitor.hs
  hs-source-dirs: src-bin
  ghc-options: -Wall -threaded
  ghc-prof-options: -fprof-auto
  default-language: Haskell2010
  build-depends: base
               , gargoyle
               , gargoyle-nix
