name: gargoyle-postgresql-connect
version: 0.1
author: Obsidian Systems LLC
maintainer: maintainer@obsidian.systems
copyright: Copyright (C) 2019 Obsidian Systems LLC
build-type: Simple
cabal-version: >=1.10
synopsis: Connect to gargoyle-managed postgresql instances
library
  exposed-modules: Gargoyle.PostgreSQL.Connect
  ghc-options: -Wall
  ghc-prof-options: -fprof-auto
  build-depends: base
               , bytestring
               , directory
               , gargoyle
               , gargoyle-postgresql
               , gargoyle-postgresql-nix
               , groundhog
               , groundhog-postgresql
               , postgresql-simple
               , resource-pool
  hs-source-dirs: src
  default-language: Haskell2010
