name: gargoyle-postgresql-connect
version: 0.1
author: Obsidian Systems LLC
maintainer: maintainer@obsidian.systems
copyright: Copyright (C) 2019 Obsidian Systems LLC
license: BSD3
license-file: LICENSE
build-type: Simple
cabal-version: >=1.10
synopsis: Connect to gargoyle-managed postgresql instances
library
  exposed-modules: Gargoyle.PostgreSQL.Connect
  ghc-options: -Wall
  ghc-prof-options: -fprof-auto
  build-depends: base
               , bytestring
               , directory
               , gargoyle == 0.2
               , gargoyle-postgresql
               , gargoyle-postgresql-nix
               , postgresql-simple
               , resource-pool
  hs-source-dirs: src
  default-language: Haskell2010
