name: gargoyle-postgresql-nix-monitor
version: 0.4
author: Obsidian Systems LLC
maintainer: maintainer@obsidian.systems
copyright: Copyright (C) 2017 Obsidian Systems LLC
license: BSD3
build-type: Simple
cabal-version: >=1.10
synopsis: <Fill this in later>
description: <Fill this in later>

executable gargoyle-nix-postgres-monitor
  main-is: gargoyle-nix-postgres-monitor.hs
  hs-source-dirs: src-bin
  ghc-options: -Wall -threaded
  ghc-prof-options: -fprof-auto
  default-language: Haskell2010
  build-depends: base
               , gargoyle
               , gargoyle-postgresql-nix