name: gargoyle-postgresql-nix
version: 0.4
author: Obsidian Systems LLC
maintainer: maintainer@obsidian.systems
copyright: Copyright (C) 2017 Obsidian Systems LLC
license: BSD3
build-type: Simple
cabal-version: >=1.10
synopsis: Manage PostgreSQL servers with gargoyle and nix
description:
  Like <https://hackage.haskell.org/package/gargoyle-postgresql gargoyle-postgresql> but it uses nix to find the locations of PostgreSQL executables.

extra-source-files:
  ChangeLog.md

library
  exposed-modules: Gargoyle.PostgreSQL.Nix
  ghc-options: -Wall
  ghc-prof-options: -fprof-auto
  build-depends: base
               , bytestring
               , process
               , shelly
               , template-haskell
               , text
               , which
               , gargoyle == 0.2.*
               , gargoyle-postgresql == 0.3.*
  hs-source-dirs: src
  default-language: Haskell2010

executable gargoyle-nix-psql
  main-is: gargoyle-nix-psql.hs
  hs-source-dirs: src-bin
  ghc-options: -Wall -threaded
  ghc-prof-options: -fprof-auto
  default-language: Haskell2010
  build-depends: base
               , which
               , gargoyle-postgresql
               , gargoyle-postgresql-nix

executable gargoyle-nix-pg-run
  main-is: gargoyle-nix-pg-run.hs
  hs-source-dirs: src-bin
  ghc-options: -Wall -threaded
  ghc-prof-options: -fprof-auto
  default-language: Haskell2010
  build-depends: base
               , gargoyle
               , gargoyle-postgresql
               , gargoyle-postgresql-nix
